feat(login): add link to register page

--- a/client/src/pages/login.html
+++ b/client/src/pages/login.html
@@ -22,8 +22,11 @@
             <input id="password" placeholder="Password" />
           </div>
         </div>
-        <div class="flex flex__justify-center mt-4">
-          <button class="button">Login</button>
+        <div class="flex flex__column flex__align-center mt-4">
+          <button class="button button__primary">Login</button>
+          <button class="button button__link mt-4">
+            Don't have an account? Register
+          </button>
         </div>
       </div>
     </div>
