--- a/client/public/books_author.html
+++ b/client/public/books_author.html
@@ -21,17 +21,24 @@
         <i class="fa fa-search" aria-hidden="true"></i>
       </div>
       <div class="side-links">
-        <button class="side-link">
+        <button class="side-link" onclick="goTo('./home.html')">
           <i class="fa fa-home" aria-hidden="true"></i>
           Home
         </button>
-        <button class="side-link side-link__active">
+        <button
+          class="side-link side-link__active"
+          onclick="goTo('./books.html')"
+        >
           <i class="fa fa-book" aria-hidden="true"></i>
           Books
         </button>
-        <button class="side-link">
+        <button class="side-link" onclick="goTo('./reviews.html')">
           <i class="fa fa-comment" aria-hidden="true"></i>
           Reviews
+        </button>
+        <button class="side-link" onclick="goTo('./books-manager.html')">
+          <i class="fa fa-table" aria-hidden="true"></i>
+          Books Manager
         </button>
         <div class="mt-3"></div>
         <button class="side-link" onClick="goTo('./login.html')">
