client: add/edit books

--- a/client/public/book.html
+++ b/client/public/book.html
@@ -36,7 +36,7 @@
           <i class="fa fa-comment" aria-hidden="true"></i>
           Reviews
         </button>
-        <button class="side-link" onclick="goTo('./books-manager.html')">
+        <button class="side-link" onclick="goTo('./books_manager.html')">
           <i class="fa fa-table" aria-hidden="true"></i>
           Books Manager
         </button>
