--- a/client/public/books_author.html
+++ b/client/public/books_author.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Way of Kings - Brandon Sanderson | Boo</title>
+    <title>Books by Brandon Sanderson | Boo</title>
     <link rel="stylesheet" href="styles/index.css" />
     <link rel="stylesheet" href="fork-awesome.css" />
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
@@ -36,7 +36,7 @@
           <i class="fa fa-comment" aria-hidden="true"></i>
           Reviews
         </button>
-        <button class="side-link" onclick="goTo('./books-manager.html')">
+        <button class="side-link" onclick="goTo('./books_manager.html')">
           <i class="fa fa-table" aria-hidden="true"></i>
           Books Manager
         </button>
