--- a/client/public/books_manager.html
+++ b/client/public/books_manager.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Way of Kings - Brandon Sanderson | Boo</title>
+    <title>Books manager | Boo</title>
     <link rel="stylesheet" href="styles/index.css" />
     <link rel="stylesheet" href="fork-awesome.css" />
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
@@ -35,7 +35,7 @@
         </button>
         <button
           class="side-link side-link__active"
-          onclick="goTo('./books-manager.html')"
+          onclick="goTo('./books_manager.html')"
         >
           <i class="fa fa-table" aria-hidden="true"></i>
           Books Manager
@@ -59,7 +59,12 @@
       <div class="flex flex__justify-between mb-8 w-100">
         <div class="text text__32 text__bold">Books Manager</div>
         <div>
-          <button class="button button__primary">Add new book</button>
+          <button
+            class="button button__primary"
+            onclick="goTo('./books_add.html')"
+          >
+            Add new book
+          </button>
         </div>
       </div>
 
@@ -79,7 +84,10 @@
             <div class="text text__16">Brandon Sanderson</div>
             <div class="text text__16">Fantasy</div>
             <div class="text text__16">
-              <button class="button button__icon mr-2">
+              <button
+                class="button button__icon mr-2"
+                onclick="goTo('./books_edit.html')"
+              >
                 <i class="fa fa-edit"></i>
               </button>
               <button class="button button__icon button__red">
@@ -93,7 +101,10 @@
             <div class="text text__16">Brandon Sanderson</div>
             <div class="text text__16">Fantasy</div>
             <div class="text text__16">
-              <button class="button button__icon mr-2">
+              <button
+                class="button button__icon mr-2"
+                onclick="goTo('./books_edit.html')"
+              >
                 <i class="fa fa-edit"></i>
               </button>
               <button class="button button__icon button__red">
@@ -107,7 +118,10 @@
             <div class="text text__16">Brandon Sanderson</div>
             <div class="text text__16">Fantasy</div>
             <div class="text text__16">
-              <button class="button button__icon mr-2">
+              <button
+                class="button button__icon mr-2"
+                onclick="goTo('./books_edit.html')"
+              >
                 <i class="fa fa-edit"></i>
               </button>
               <button class="button button__icon button__red">
@@ -121,7 +135,10 @@
             <div class="text text__16">Brandon Sanderson</div>
             <div class="text text__16">Fantasy</div>
             <div class="text text__16">
-              <button class="button button__icon mr-2">
+              <button
+                class="button button__icon mr-2"
+                onclick="goTo('./books_edit.html')"
+              >
                 <i class="fa fa-edit"></i>
               </button>
               <button class="button button__icon button__red">
@@ -135,7 +152,10 @@
             <div class="text text__16">Brandon Sanderson</div>
             <div class="text text__16">Fantasy</div>
             <div class="text text__16">
-              <button class="button button__icon mr-2">
+              <button
+                class="button button__icon mr-2"
+                onclick="goTo('./books_edit.html')"
+              >
                 <i class="fa fa-edit"></i>
               </button>
               <button class="button button__icon button__red">
