--- a/client/public/login.html
+++ b/client/public/login.html
@@ -7,6 +7,7 @@
     <title>Login</title>
     <link rel="stylesheet" href="styles/index.css" />
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
+    <script src="./scripts/navigate.js"></script>
   </head>
   <body>
     <div class="auth">
@@ -20,16 +21,16 @@
           </div>
           <div class="form-input">
             <label for="password">Password</label>
-            <input id="password" placeholder="Password" />
+            <input id="password" placeholder="Password" type="password"/>
           </div>
         </div>
         <div class="flex flex__column flex__align-center mt-4">
           <button class="button button__primary">Login</button>
-          <button class="button button__link mt-4">
+          <button class="button button__link mt-4" onclick="goTo('./register.html')">
             Don't have an account? Register
           </button>
         </div>
       </div>
     </div>
   </body>
-</html>
+</html> 
