client: make layout and auth responsive

--- a/client/public/books_add.html
+++ b/client/public/books_add.html
@@ -11,8 +11,15 @@
 
     <script src="./scripts/navigate.js"></script>
     <script src="./scripts/file-input.js"></script>
+    <script src="./scripts/sidebar.js"></script>
   </head>
   <body>
+    <nav>
+      <button>
+        <i class="fa fa-arrow-right" aria-hidden="true"></i>
+      </button>
+    </nav>
+
     <aside class="side">
       <div class="side-logo">
         <img src="assets/logo_white.svg" alt="logo" />
