--- a/client/public/home.html
+++ b/client/public/home.html
@@ -10,8 +10,15 @@
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
 
     <script src="./scripts/navigate.js"></script>
+    <script src="./scripts/sidebar.js"></script>
   </head>
   <body>
+    <nav>
+      <button>
+        <i class="fa fa-arrow-right" aria-hidden="true"></i>
+      </button>
+    </nav>
+
     <aside class="side">
       <div class="side-logo">
         <img src="assets/logo_white.svg" alt="logo" />
