--- a/client/public/register.html
+++ b/client/public/register.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Register</title>
-    <link rel="stylesheet" href="styles/auth.css" />
+    <link rel="stylesheet" href="styles/index.css" />
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
     <script src="./scripts/navigate.js"></script>
   </head>
 
   <body>
-    <div class="page">
-      <div class="page-container">
-        <img class="page-container-logo" src="assets/logo.svg" alt="logo" />
+    <div class="auth">
+      <div class="auth-container">
+        <img class="auth-container-logo" src="assets/logo.svg" alt="logo" />
         <div class="text text__32 text__bold text__center mb-4">Register</div>
         <div class="form w-100">
           <div class="form-input">
