feat(book): make book page responsive

--- a/client/public/book.html
+++ b/client/public/book.html
@@ -65,6 +65,15 @@
 
     <main>
       <div class="book">
+        <div class="book-title-mobile">
+          <div class="text text__32 text__bold mt-6">The Way Of Kings</div>
+          <div
+            class="book-clickable text text__24"
+            onclick="goTo('./books_author.html')"
+          >
+            Brandon Sanderson
+          </div>
+        </div>
         <div class="book-image">
           <img
             src="./assets/books/the_way_of_kings.jpeg"
@@ -79,12 +88,14 @@
           </div>
         </div>
         <div class="book-info">
-          <div class="text text__32 text__bold">The Way Of Kings</div>
-          <div
-            class="book-clickable text text__24"
-            onclick="goTo('./books_author.html')"
-          >
-            Brandon Sanderson
+          <div class="book-title-desktop">
+            <div class="text text__32 text__bold">The Way Of Kings</div>
+            <div
+              class="book-clickable text text__24"
+              onclick="goTo('./books_author.html')"
+            >
+              Brandon Sanderson
+            </div>
           </div>
           <p class="text text__14 mt-8">
             Roshar is a world of stone and storms. Uncanny tempests of
