--- a/client/public/help.html
+++ b/client/public/help.html
@@ -55,7 +55,7 @@
     </aside>
     <main>
         <div class="help">
-            <div class="help-message">Frequently asked questions</div>
+            <div class="text text__32 text__bold">Frequently asked questions</div>
             <div class="help-container">
                 <div class="help-container-questions">
                     <div class="text text__24 text__bold mb-5">Questions</div>
@@ -64,28 +64,39 @@
                             <div class="text text__14 text__bold">How to add a book ?</div>
                             <div class="question_card-specifications">
                                 <div class="question_card-specifications-details">
-                                    <label class="text text__14">Topic: </label>
-                                    <div class="text text__14 text__bold">My account</div>
-                                    <i class="fa fa-user" aria-hidden="true"></i>
-                                    <div class="text text__14 ">Johnathan</div>
-                                    <i class="fa fa-calendar" aria-hidden="true"></i>
-                                    <div class="text text__14 ">12/12/2021</div>
+                                    <div class="question_card-specifications-element">
+                                        <label class="text text__14">Topic: </label>
+                                        <div id="topic" class="text text__14 text__bold text__center">My account</div>
+                                    </div>
+                                    <div class="question_card-specifications-element">
+                                        <i class="fa fa-user" aria-hidden="true"></i>
+                                        <div class="text text__14 ">Johnathan</div>
+                                    </div>
+                                    <div class="question_card-specifications-element">
+                                        <i class="fa fa-calendar" aria-hidden="true"></i>
+                                        <div class="text text__14 ">12/12/2021</div>
+                                    </div>
                                 </div>
-                                <div class="question_card-specifications-statistics">
+                            </div>
+                            <div class="question_card-specifications-statistics">
+                                <div class="question_card-specifications-element">
                                     <i class="fa fa-eye" aria-hidden="true"></i>
-                                    <div class="text text__14">42.5k</div>
+                                    <div class="text text__14 ">42.5k</div>
+                                </div>
+                                <div class="question_card-specifications-element">
                                     <i class="fa fa-thumbs-up" aria-hidden="true"></i>
                                     <div class="text text__14 ">9.3k</div>
+                                </div>
+                                <div class="question_card-specifications-element">
                                     <i class="fa fa-comments" aria-hidden="true"></i>
                                     <div class="text text__14 ">8.2k</div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="help-container-panel">
-                    <button class="button__primary">Ask a question</button>
-                </div>
+                    <div class="help-container-panel">
+                        <button class="button__primary">Ask a question</button>
+                    </div>
     </main>
 
 </html>
