--- a/client/public/books_edit.html
+++ b/client/public/books_edit.html
@@ -48,6 +48,14 @@
           <i class="fa fa-table" aria-hidden="true"></i>
           Books Manager
         </button>
+        <button class="side-link" onclick="goTo('./about.html')">
+          <i class="fa fa-info-circle" aria-hidden="true"></i>
+          About
+        </button>
+        <button class="side-link" onclick="goTo('./help.html')">
+          <i class="fa fa-question-circle" aria-hidden="true"></i>
+          Help
+        </button>
         <div class="mt-3"></div>
         <button class="side-link" onClick="goTo('./login.html')">
           <i class="fa fa-user" aria-hidden="true"></i>
