help-page - done

--- a/client/public/help.html
+++ b/client/public/help.html
@@ -93,10 +93,221 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="question_card">
+                            <div class="text text__14 text__bold">How to add a book ?</div>
+                            <div class="question_card-specifications">
+                                <div class="question_card-specifications-details">
+                                    <div class="question_card-specifications-element">
+                                        <label class="text text__14">Topic: </label>
+                                        <div id="topic" class="text text__14 text__bold text__center">My account</div>
+                                    </div>
+                                    <div class="question_card-specifications-element">
+                                        <i class="fa fa-user" aria-hidden="true"></i>
+                                        <div class="text text__14 ">Johnathan</div>
+                                    </div>
+                                    <div class="question_card-specifications-element">
+                                        <i class="fa fa-calendar" aria-hidden="true"></i>
+                                        <div class="text text__14 ">12/12/2021</div>
+                                    </div>
+                                </div>
+                                <div class="question_card-specifications-statistics">
+                                    <div class="question_card-specifications-element">
+                                        <i class="fa fa-eye" aria-hidden="true"></i>
+                                        <div class="text text__14 ">42.5k</div>
+                                    </div>
+                                    <div class="question_card-specifications-element">
+                                        <i class="fa fa-thumbs-up" aria-hidden="true"></i>
+                                        <div class="text text__14 ">9.3k</div>
+                                    </div>
+                                    <div class="question_card-specifications-element">
+                                        <i class="fa fa-comments" aria-hidden="true"></i>
+                                        <div class="text text__14 ">8.2k</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="question_card">
+                            <div class="text text__14 text__bold">How to add a book ?</div>
+                            <div class="question_card-specifications">
+                                <div class="question_card-specifications-details">
+                                    <div class="question_card-specifications-element">
+                                        <label class="text text__14">Topic: </label>
+                                        <div id="topic" class="text text__14 text__bold text__center">My account</div>
+                                    </div>
+                                    <div class="question_card-specifications-element">
+                                        <i class="fa fa-user" aria-hidden="true"></i>
+                                        <div class="text text__14 ">Johnathan</div>
+                                    </div>
+                                    <div class="question_card-specifications-element">
+                                        <i class="fa fa-calendar" aria-hidden="true"></i>
+                                        <div class="text text__14 ">12/12/2021</div>
+                                    </div>
+                                </div>
+                                <div class="question_card-specifications-statistics">
+                                    <div class="question_card-specifications-element">
+                                        <i class="fa fa-eye" aria-hidden="true"></i>
+                                        <div class="text text__14 ">42.5k</div>
+                                    </div>
+                                    <div class="question_card-specifications-element">
+                                        <i class="fa fa-thumbs-up" aria-hidden="true"></i>
+                                        <div class="text text__14 ">9.3k</div>
+                                    </div>
+                                    <div class="question_card-specifications-element">
+                                        <i class="fa fa-comments" aria-hidden="true"></i>
+                                        <div class="text text__14 ">8.2k</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="question_card">
+                            <div class="text text__14 text__bold">How to add a book ?</div>
+                            <div class="question_card-specifications">
+                                <div class="question_card-specifications-details">
+                                    <div class="question_card-specifications-element">
+                                        <label class="text text__14">Topic: </label>
+                                        <div id="topic" class="text text__14 text__bold text__center">My account</div>
+                                    </div>
+                                    <div class="question_card-specifications-element">
+                                        <i class="fa fa-user" aria-hidden="true"></i>
+                                        <div class="text text__14 ">Johnathan</div>
+                                    </div>
+                                    <div class="question_card-specifications-element">
+                                        <i class="fa fa-calendar" aria-hidden="true"></i>
+                                        <div class="text text__14 ">12/12/2021</div>
+                                    </div>
+                                </div>
+                                <div class="question_card-specifications-statistics">
+                                    <div class="question_card-specifications-element">
+                                        <i class="fa fa-eye" aria-hidden="true"></i>
+                                        <div class="text text__14 ">42.5k</div>
+                                    </div>
+                                    <div class="question_card-specifications-element">
+                                        <i class="fa fa-thumbs-up" aria-hidden="true"></i>
+                                        <div class="text text__14 ">9.3k</div>
+                                    </div>
+                                    <div class="question_card-specifications-element">
+                                        <i class="fa fa-comments" aria-hidden="true"></i>
+                                        <div class="text text__14 ">8.2k</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="question_card">
+                            <div class="text text__14 text__bold">How to add a book ?</div>
+                            <div class="question_card-specifications">
+                                <div class="question_card-specifications-details">
+                                    <div class="question_card-specifications-element">
+                                        <label class="text text__14">Topic: </label>
+                                        <div id="topic" class="text text__14 text__bold text__center">My account</div>
+                                    </div>
+                                    <div class="question_card-specifications-element">
+                                        <i class="fa fa-user" aria-hidden="true"></i>
+                                        <div class="text text__14 ">Johnathan</div>
+                                    </div>
+                                    <div class="question_card-specifications-element">
+                                        <i class="fa fa-calendar" aria-hidden="true"></i>
+                                        <div class="text text__14 ">12/12/2021</div>
+                                    </div>
+                                </div>
+                                <div class="question_card-specifications-statistics">
+                                    <div class="question_card-specifications-element">
+                                        <i class="fa fa-eye" aria-hidden="true"></i>
+                                        <div class="text text__14 ">42.5k</div>
+                                    </div>
+                                    <div class="question_card-specifications-element">
+                                        <i class="fa fa-thumbs-up" aria-hidden="true"></i>
+                                        <div class="text text__14 ">9.3k</div>
+                                    </div>
+                                    <div class="question_card-specifications-element">
+                                        <i class="fa fa-comments" aria-hidden="true"></i>
+                                        <div class="text text__14 ">8.2k</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="question_card">
+                            <div class="text text__14 text__bold">How to add a book ?</div>
+                            <div class="question_card-specifications">
+                                <div class="question_card-specifications-details">
+                                    <div class="question_card-specifications-element">
+                                        <label class="text text__14">Topic: </label>
+                                        <div id="topic" class="text text__14 text__bold text__center">My account</div>
+                                    </div>
+                                    <div class="question_card-specifications-element">
+                                        <i class="fa fa-user" aria-hidden="true"></i>
+                                        <div class="text text__14 ">Johnathan</div>
+                                    </div>
+                                    <div class="question_card-specifications-element">
+                                        <i class="fa fa-calendar" aria-hidden="true"></i>
+                                        <div class="text text__14 ">12/12/2021</div>
+                                    </div>
+                                </div>
+                                <div class="question_card-specifications-statistics">
+                                    <div class="question_card-specifications-element">
+                                        <i class="fa fa-eye" aria-hidden="true"></i>
+                                        <div class="text text__14 ">42.5k</div>
+                                    </div>
+                                    <div class="question_card-specifications-element">
+                                        <i class="fa fa-thumbs-up" aria-hidden="true"></i>
+                                        <div class="text text__14 ">9.3k</div>
+                                    </div>
+                                    <div class="question_card-specifications-element">
+                                        <i class="fa fa-comments" aria-hidden="true"></i>
+                                        <div class="text text__14 ">8.2k</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="question_card">
+                            <div class="text text__14 text__bold">How to add a book ?</div>
+                            <div class="question_card-specifications">
+                                <div class="question_card-specifications-details">
+                                    <div class="question_card-specifications-element">
+                                        <label class="text text__14">Topic: </label>
+                                        <div id="topic" class="text text__14 text__bold text__center">My account</div>
+                                    </div>
+                                    <div class="question_card-specifications-element">
+                                        <i class="fa fa-user" aria-hidden="true"></i>
+                                        <div class="text text__14 ">Johnathan</div>
+                                    </div>
+                                    <div class="question_card-specifications-element">
+                                        <i class="fa fa-calendar" aria-hidden="true"></i>
+                                        <div class="text text__14 ">12/12/2021</div>
+                                    </div>
+                                </div>
+                                <div class="question_card-specifications-statistics">
+                                    <div class="question_card-specifications-element">
+                                        <i class="fa fa-eye" aria-hidden="true"></i>
+                                        <div class="text text__14 ">42.5k</div>
+                                    </div>
+                                    <div class="question_card-specifications-element">
+                                        <i class="fa fa-thumbs-up" aria-hidden="true"></i>
+                                        <div class="text text__14 ">9.3k</div>
+                                    </div>
+                                    <div class="question_card-specifications-element">
+                                        <i class="fa fa-comments" aria-hidden="true"></i>
+                                        <div class="text text__14 ">8.2k</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="help-container-panel">
-                    <button class="button__primary">Ask a question</button>
+                    <div class="text text__24 text__bold mb-5">Ask a question</div>
+                        <div class="form">
+                            <div class="form-textarea">
+                                <textarea
+                                    name="message"
+                                    rows="10"
+                                    placeholder="Message"
+                                ></textarea>
+                            </div>
+                            <div class="action">
+                                <button class="button button__primary">Post</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
     </main>
