--- a/client/public/about.html
+++ b/client/public/about.html
@@ -14,6 +14,11 @@
   </head>
 
   <body>
+    <nav>
+      <button>
+        <i class="fa fa-arrow-right" aria-hidden="true"></i>
+      </button>
+    </nav>
     <aside class="side">
       <div class="side-logo">
         <img src="assets/logo_white.svg" alt="logo" />
