--- a/client/public/help.html
+++ b/client/public/help.html
@@ -13,6 +13,11 @@
   </head>
 
   <body>
+    <nav>
+      <button>
+        <i class="fa fa-arrow-right" aria-hidden="true"></i>
+      </button>
+    </nav>
     <aside class="side">
       <div class="side-logo">
         <img src="assets/logo_white.svg" alt="logo" />
