--- a/client/public/help.html
+++ b/client/public/help.html
@@ -10,6 +10,7 @@
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
 
     <script src="./scripts/navigate.js"></script>
+    <script src="./scripts/sidebar.js"></script>
   </head>
 
   <body>
@@ -45,6 +46,14 @@
         <button class="side-link" onclick="goTo('./books_manager.html')">
           <i class="fa fa-table" aria-hidden="true"></i>
           Books Manager
+        </button>
+        <button class="side-link" onclick="goTo('./about.html')">
+          <i class="fa fa-info-circle" aria-hidden="true"></i>
+          About
+        </button>
+        <button class="side-link" onclick="goTo('./help.html')">
+          <i class="fa fa-question-circle" aria-hidden="true"></i>
+          Help
         </button>
         <div class="mt-3"></div>
         <button class="side-link" onClick="goTo('./login.html')">
