--- a/client/public/help.html
+++ b/client/public/help.html
@@ -32,10 +32,7 @@
           <i class="fa fa-home" aria-hidden="true"></i>
           Home
         </button>
-        <button
-          class="side-link side-link__active"
-          onclick="goTo('./books.html')"
-        >
+        <button class="side-link" onclick="goTo('./books.html')">
           <i class="fa fa-book" aria-hidden="true"></i>
           Books
         </button>
@@ -51,7 +48,10 @@
           <i class="fa fa-info-circle" aria-hidden="true"></i>
           About
         </button>
-        <button class="side-link" onclick="goTo('./help.html')">
+        <button
+          class="side-link side-link__active"
+          onclick="goTo('./help.html')"
+        >
           <i class="fa fa-question-circle" aria-hidden="true"></i>
           Help
         </button>
