help_question page first iteration

--- a/client/public/help.html
+++ b/client/public/help.html
@@ -344,7 +344,7 @@
               </div>
             </div>
           </div>
-          <div class="help-container-panel">
+          <div class="help-container-form">
             <div class="text text__24 text__bold mb-5">Ask a question</div>
             <div class="form">
               <div class="form-textarea">
