--- a/client/public/help_question.html
+++ b/client/public/help_question.html
@@ -118,7 +118,9 @@
               </div>
             </div>
           </div>
-          <div class="help_question-specifications-answers">
+        </div>
+        <div class="help_question-container">
+          <div class="help_question-container-answers">
             <div class="review mt-4">
               <div class="text text__16 text__bold mb-1">
                 Anthony Clarke - August 12 2023
@@ -175,19 +177,19 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="help_question-form">
-          <div class="text text__20 text__bold mb-5">Your response</div>
-          <div class="form">
-            <div class="form-textarea">
-              <textarea
-                name="response"
-                rows="10"
-                placeholder="Your response..."
-              ></textarea>
-            </div>
-            <div class="action">
-              <button class="button button__primary">Post</button>
+          <div class="help_question-container-form">
+            <div class="text text__20 text__bold mb-5">Your response</div>
+            <div class="form">
+              <div class="form-textarea">
+                <textarea
+                  name="response"
+                  rows="10"
+                  placeholder="Your response..."
+                ></textarea>
+              </div>
+              <div class="action">
+                <button class="button button__primary">Post</button>
+              </div>
             </div>
           </div>
         </div>
