chore: add scholarly doc

--- a/client/public/home.html
+++ b/client/public/home.html
@@ -74,8 +74,11 @@
     <main>
       <div class="home">
         <div class="text text__32 text__bold mb-4">Your habits in numbers</div>
-        <div>
-          <button class="button button__primary mr-4 mb-2">Download CSV</button>
+        <div class="home-analytics">
+          <button class="button button__icon-large mr-4">
+            <i class="fa fa-rss"></i>
+          </button>
+          <button class="button button__primary mr-4">Download CSV</button>
           <button class="button button__primary">Download DocBook</button>
         </div>
       </div>
