chore: fix scholarly numbering

--- a/documentation/scholarly.html
+++ b/documentation/scholarly.html
@@ -49,7 +49,7 @@
     -->
     <div role="contentinfo"></div>
     <section typeof="sa:Abstract" id="abstract" role="doc-abstract">
-      <h2><span>1. </span>Abstract</h2>
+      <h2>Abstract</h2>
       <p>
         In recent years, the popularity of online book communities has increased
         significantly, and there has been a surge in the development of book
