refactor(client): extract scripts into a single file

--- a/client/public/about.html
+++ b/client/public/about.html
@@ -9,8 +9,10 @@
     <link rel="stylesheet" href="fork-awesome.css" />
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
 
-    <script src="./scripts/navigate.js"></script>
-    <script src="./scripts/sidebar.js"></script>
+    <meta name="page-name" content="about" />
+    <script src="./scripts/app.js"></script>
+    <script src="./goTo.js"></script>
+    <script src="./goTo.js"></script>
   </head>
 
   <body>
