--- a/client/public/books_genre.html
+++ b/client/public/books_genre.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="fork-awesome.css" />
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
 
-    <script src="./scripts/navigate.js"></script>
-    <script src="./scripts/sidebar.js"></script>
-    <script src="./scripts/books-bg.js"></script>
+    <meta name="page-name" content="books_genre" />
+    <script src="./scripts/app.js"></script>
+    <script src="./goTo.js"></script>
   </head>
   <body>
     <nav>
