--- a/client/public/register.html
+++ b/client/public/register.html
@@ -7,7 +7,10 @@
     <title>Register</title>
     <link rel="stylesheet" href="styles/index.css" />
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
-    <script src="./scripts/navigate.js"></script>
+
+    <meta name="page-name" content="register" />
+    <script src="./scripts/app.js"></script>
+    <script src="./goTo.js"></script>
   </head>
 
   <body>
