--- a/client/public/help.html
+++ b/client/public/help.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="fork-awesome.css" />
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
 
-    <script src="./scripts/navigate.js"></script>
-    <script src="./scripts/sidebar.js"></script>
+    <meta name="page-name" content="help" />
+    <script src="./scripts/app.js"></script>
+    <script src="./goTo.js"></script>
   </head>
 
   <body>
