--- a/client/public/reviews.html
+++ b/client/public/reviews.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="styles/index.css" />
     <link rel="stylesheet" href="fork-awesome.css" />
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
-    <script src="./scripts/navigate.js"></script>
-    <script src="./scripts/sidebar.js"></script>
-    <script src="./scripts/books-bg.js"></script>
+
+    <meta name="page-name" content="reviews" />
+    <script src="./scripts/app.js"></script>
+    <script src="./goTo.js"></script>
   </head>
   <body>
     <nav>
