wip(login): handle login form

--- a/client/public/register.html
+++ b/client/public/register.html
@@ -14,6 +14,10 @@
   </head>
 
   <body>
+    <div class="loading" id="loading">
+      <img src="assets/loading.gif" alt="logo" />
+    </div>
+
     <div class="auth">
       <div class="auth-container">
         <img class="auth-container-logo" src="assets/logo.svg" alt="logo" />
