--- a/client/public/about.html
+++ b/client/public/about.html
@@ -16,6 +16,10 @@
   </head>
 
   <body>
+    <div class="loading" id="loading">
+      <img src="assets/loading.gif" alt="logo" />
+    </div>
+
     <nav>
       <button>
         <i class="fa fa-arrow-right" aria-hidden="true"></i>
