--- a/client/public/reviews.html
+++ b/client/public/reviews.html
@@ -14,6 +14,10 @@
     <script src="./goTo.js"></script>
   </head>
   <body>
+    <div class="loading" id="loading">
+      <img src="assets/loading.gif" alt="logo" />
+    </div>
+
     <nav>
       <button>
         <i class="fa fa-arrow-right" aria-hidden="true"></i>
