--- a/client/public/login.html
+++ b/client/public/login.html
@@ -37,6 +37,7 @@
             <button
               class="button button__link mt-4"
               onclick="goTo('./register.html')"
+              type="button"
             >
               Don't have an account? Register
             </button>
