--- a/client/public/register.html
+++ b/client/public/register.html
@@ -22,34 +22,44 @@
       <div class="auth-container">
         <img class="auth-container-logo" src="assets/logo.svg" alt="logo" />
         <div class="text text__32 text__bold text__center mb-4">Register</div>
-        <div class="form w-100">
+        <form class="form w-100">
           <div class="form-input">
-            <label for="name">Your name</label>
-            <input id="name" placeholder="Your name" />
+            <label for="name">Name</label>
+            <input id="name" placeholder="Name" />
+            <span></span>
           </div>
           <div class="form-input">
             <label for="email">Email</label>
             <input id="email" placeholder="Email" />
+            <span></span>
           </div>
           <div class="form-input">
             <label for="password">Password</label>
             <input type="password" id="password" placeholder="Password" />
+            <span></span>
           </div>
           <div class="form-input">
-            <label for="password">Confirm password</label>
+            <label for="confirmPassword">Confirm password</label>
             <input
               type="password"
-              id="password"
+              id="confirmPassword"
               placeholder="Confirm password"
             />
+            <span></span>
           </div>
-        </div>
-        <div class="flex flex__column flex__align-center mt-4">
-          <button class="button button__primary">register</button>
-          <button class="button button__link mt-4" onclick="goTo('login.html')">
-            Already have an account? Login.
-          </button>
-        </div>
+          <div class="flex flex__column flex__align-center mt-4">
+            <button class="button button__primary" type="submit">
+              Register
+            </button>
+            <button
+              class="button button__link mt-4"
+              onclick="goTo('./login.html')"
+              type="button"
+            >
+              Already have an account? Login.
+            </button>
+          </div>
+        </form>
       </div>
     </div>
   </body>
