feat(auth): connect with BE

--- a/client/public/login.html
+++ b/client/public/login.html
@@ -32,6 +32,7 @@
             <input id="password" placeholder="Password" type="password" />
             <span></span>
           </div>
+          <div id="error" class="text text__16 text__center w-100"></div>
           <div class="flex flex__column flex__align-center mt-4">
             <button class="button button__primary" type="submit">Login</button>
             <button
