--- a/client/public/register.html
+++ b/client/public/register.html
@@ -47,6 +47,7 @@
             />
             <span></span>
           </div>
+          <div id="error" class="text text__16 text__center w-100"></div>
           <div class="flex flex__column flex__align-center mt-4">
             <button class="button button__primary" type="submit">
               Register
